<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.kivihendrik.languagelearn.ChooseLanguageActivity">

    <TextView
        android:id="@+id/tvFromLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textFromLanguage"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <Spinner
        android:id="@+id/spinnerFromLanguage"
        android:layout_width="379dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFromLanguage" />

    <TextView
        android:id="@+id/tvToLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textToLanguage"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFromLanguage"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <Spinner
        android:id="@+id/spinnerToLanguage"
        android:layout_width="379dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvToLanguage" />

    <Button
        android:id="@+id/btnConfirmLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="startPractice"
        android:text="@string/buttonStartPractice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerToLanguage" />
</android.support.constraint.ConstraintLayout>
